v1/docs/ModelsSSLDisplayScanJobPart.md
# ModelsSSLDisplayScanJobPart

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**ScanJobPartId** | Pointer to **string** |  | [optional] 
**Agent** | Pointer to **string** |  | [optional] 
**Status** | Pointer to **int32** |  | [optional] 
**StartTime** | Pointer to **time.Time** |  | [optional] 
**EndTime** | Pointer to **time.Time** |  | [optional] 
**EndpointCount** | Pointer to **int32** |  | [optional] 

## Methods

### NewModelsSSLDisplayScanJobPart

`func NewModelsSSLDisplayScanJobPart() *ModelsSSLDisplayScanJobPart`

NewModelsSSLDisplayScanJobPart instantiates a new ModelsSSLDisplayScanJobPart object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsSSLDisplayScanJobPartWithDefaults

`func NewModelsSSLDisplayScanJobPartWithDefaults() *ModelsSSLDisplayScanJobPart`

NewModelsSSLDisplayScanJobPartWithDefaults instantiates a new ModelsSSLDisplayScanJobPart object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetScanJobPartId

`func (o *ModelsSSLDisplayScanJobPart) GetScanJobPartId() string`

GetScanJobPartId returns the ScanJobPartId field if non-nil, zero value otherwise.

### GetScanJobPartIdOk

`func (o *ModelsSSLDisplayScanJobPart) GetScanJobPartIdOk() (*string, bool)`

GetScanJobPartIdOk returns a tuple with the ScanJobPartId field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetScanJobPartId

`func (o *ModelsSSLDisplayScanJobPart) SetScanJobPartId(v string)`

SetScanJobPartId sets ScanJobPartId field to given value.

### HasScanJobPartId

`func (o *ModelsSSLDisplayScanJobPart) HasScanJobPartId() bool`

HasScanJobPartId returns a boolean if a field has been set.

### GetAgent

`func (o *ModelsSSLDisplayScanJobPart) GetAgent() string`

GetAgent returns the Agent field if non-nil, zero value otherwise.

### GetAgentOk

`func (o *ModelsSSLDisplayScanJobPart) GetAgentOk() (*string, bool)`

GetAgentOk returns a tuple with the Agent field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetAgent

`func (o *ModelsSSLDisplayScanJobPart) SetAgent(v string)`

SetAgent sets Agent field to given value.

### HasAgent

`func (o *ModelsSSLDisplayScanJobPart) HasAgent() bool`

HasAgent returns a boolean if a field has been set.

### GetStatus

`func (o *ModelsSSLDisplayScanJobPart) GetStatus() int32`

GetStatus returns the Status field if non-nil, zero value otherwise.

### GetStatusOk

`func (o *ModelsSSLDisplayScanJobPart) GetStatusOk() (*int32, bool)`

GetStatusOk returns a tuple with the Status field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetStatus

`func (o *ModelsSSLDisplayScanJobPart) SetStatus(v int32)`

SetStatus sets Status field to given value.

### HasStatus

`func (o *ModelsSSLDisplayScanJobPart) HasStatus() bool`

HasStatus returns a boolean if a field has been set.

### GetStartTime

`func (o *ModelsSSLDisplayScanJobPart) GetStartTime() time.Time`

GetStartTime returns the StartTime field if non-nil, zero value otherwise.

### GetStartTimeOk

`func (o *ModelsSSLDisplayScanJobPart) GetStartTimeOk() (*time.Time, bool)`

GetStartTimeOk returns a tuple with the StartTime field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetStartTime

`func (o *ModelsSSLDisplayScanJobPart) SetStartTime(v time.Time)`

SetStartTime sets StartTime field to given value.

### HasStartTime

`func (o *ModelsSSLDisplayScanJobPart) HasStartTime() bool`

HasStartTime returns a boolean if a field has been set.

### GetEndTime

`func (o *ModelsSSLDisplayScanJobPart) GetEndTime() time.Time`

GetEndTime returns the EndTime field if non-nil, zero value otherwise.

### GetEndTimeOk

`func (o *ModelsSSLDisplayScanJobPart) GetEndTimeOk() (*time.Time, bool)`

GetEndTimeOk returns a tuple with the EndTime field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetEndTime

`func (o *ModelsSSLDisplayScanJobPart) SetEndTime(v time.Time)`

SetEndTime sets EndTime field to given value.

### HasEndTime

`func (o *ModelsSSLDisplayScanJobPart) HasEndTime() bool`

HasEndTime returns a boolean if a field has been set.

### GetEndpointCount

`func (o *ModelsSSLDisplayScanJobPart) GetEndpointCount() int32`

GetEndpointCount returns the EndpointCount field if non-nil, zero value otherwise.

### GetEndpointCountOk

`func (o *ModelsSSLDisplayScanJobPart) GetEndpointCountOk() (*int32, bool)`

GetEndpointCountOk returns a tuple with the EndpointCount field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetEndpointCount

`func (o *ModelsSSLDisplayScanJobPart) SetEndpointCount(v int32)`

SetEndpointCount sets EndpointCount field to given value.

### HasEndpointCount

`func (o *ModelsSSLDisplayScanJobPart) HasEndpointCount() bool`

HasEndpointCount returns a boolean if a field has been set.


[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


